// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.policy;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/policy";

// RollbackService provides functions to set up a simple psk network before
// rollback and to verify that an enterprise rollback was successful afterwards.
service RollbackService {
  rpc SetUpPskNetwork (google.protobuf.Empty) returns (Guid);
  rpc VerifyRollback (Guid) returns (RollbackSuccessfulResponse);
}

message Guid {
  string guid = 1;
}

message RollbackSuccessfulResponse {
  bool successful = 1;
}
